--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,5 +13,7 @@ jobs:
     uses: obervinov/_templates/.github/workflows/pylint.yml@v1.0.1
   flake8:
     uses: obervinov/_templates/.github/workflows/flake8.yml@v1.0.1
+  pytest:
+    uses: obervinov/_templates/.github/workflows/pytest.yml@added-trivy
   package-version:
     uses: obervinov/_templates/.github/workflows/version.yml@v1.0.1
