--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -2,17 +2,21 @@ name: Tests and checks
 
 on:
   push:
-    branches:    
+    branches:
       - '*'
       - '*/*'
       - '**'
+      - '!main'
 
 jobs:
   changelog:
     uses: obervinov/_templates/.github/workflows/changelog.yaml@release/v1.0.12
+
   pylint:
     uses: obervinov/_templates/.github/workflows/pylint.yaml@release/v1.0.12
+
   pytest:
     uses: obervinov/_templates/.github/workflows/pytest.yaml@release/v1.0.12
+
   pyproject:
     uses: obervinov/_templates/.github/workflows/pyproject.yaml@release/v1.0.12
