--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,12 +1,25 @@
-name: Create release
+name: Release
 
 on:
-  workflow_run:
-    workflows: ["Tests and Checks"]
-    branches: [main]
-    types: 
-      - completed
+  pull_request:
+    branches:
+      - main
+    types:
+      - closed
 
 jobs:
+  changelog:
+    uses: obervinov/_templates/.github/workflows/changelog.yaml@release/v1.0.12
+
+  pylint:
+    uses: obervinov/_templates/.github/workflows/pylint.yaml@release/v1.0.12
+
+  pytest:
+    uses: obervinov/_templates/.github/workflows/pytest.yaml@release/v1.0.12
+
+  pyproject:
+    uses: obervinov/_templates/.github/workflows/pyproject.yaml@release/v1.0.12
+
   create-release:
-    uses: obervinov/_templates/.github/workflows/release.yaml@v1.0.12
+    uses: obervinov/_templates/.github/workflows/release.yaml@release/v1.0.12
+    needs: [changelog, pylint, pytest, pyproject]
