modified:   .github/workflows/pr.yaml modified:   .github/workflows/release.yaml

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,17 +9,17 @@ on:
 
 jobs:
   changelog:
-    uses: obervinov/_templates/.github/workflows/changelog.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/changelog.yaml@v1.0.12
 
   pylint:
-    uses: obervinov/_templates/.github/workflows/pylint.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/pylint.yaml@v1.0.12
 
   pytest:
-    uses: obervinov/_templates/.github/workflows/pytest.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/pytest.yaml@v1.0.12
 
   pyproject:
-    uses: obervinov/_templates/.github/workflows/pyproject.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/pyproject.yaml@v1.0.12
 
   create-release:
-    uses: obervinov/_templates/.github/workflows/release.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/release.yaml@v1.0.12
     needs: [changelog, pylint, pytest, pyproject]
