--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -10,13 +10,13 @@ on:
 
 jobs:
   changelog:
-    uses: obervinov/_templates/.github/workflows/changelog.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/changelog.yaml@v1.0.12
 
   pylint:
-    uses: obervinov/_templates/.github/workflows/pylint.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/pylint.yaml@v1.0.12
 
   pytest:
-    uses: obervinov/_templates/.github/workflows/pytest.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/pytest.yaml@v1.0.12
 
   pyproject:
-    uses: obervinov/_templates/.github/workflows/pyproject.yaml@release/v1.0.12
+    uses: obervinov/_templates/.github/workflows/pyproject.yaml@v1.0.12
