--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,14 +9,8 @@ on:
       - '!main'
 
 jobs:
-  changelog:
-    uses: obervinov/_templates/.github/workflows/changelog.yaml@v1.0.13
-
-  pylint:
-    uses: obervinov/_templates/.github/workflows/pylint.yaml@v1.0.13
-
-  pytest:
-    uses: obervinov/_templates/.github/workflows/pytest.yaml@v1.0.13
+  pr:
+    uses: obervinov/_templates/.github/workflows/pr.yaml@v2.0.0
 
   pyproject:
-    uses: obervinov/_templates/.github/workflows/pyproject.yaml@v1.0.13
+    uses: obervinov/_templates/.github/workflows/pyproject.yaml@v2.0.0
